[package]
name = "nestle_cpu"
version = "0.1.0"
authors = ["Zeyi Fan <github@zeyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asm6502 = { path = "../asm6502" }
bitflags = "1.2.1"
nestle_ines = { path = "../nestle_ines" }
anyhow = "1.0.32"
log = "0.4.11"
